--- a/for-regulators.html
+++ b/for-regulators.html
@@ -1,5 +1,3 @@
-<!-- STATUS: UPDATED — Aligned with EntityWorks Positioning Codex -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -160,7 +158,7 @@
     <h1>For regulators</h1>
     <p><strong>Human-Facing Edition (v1.1)</strong></p>
 
-    <h2>1. Role of AI systems in regulated contexts</h2>
+    <h2>1. Role of AI Systems in Regulated Contexts</h2>
     <p>
       AI systems increasingly act as an initial interpretive layer across public services, regulated sectors, and organisational environments. As these systems perform retrieval, reasoning, classification, and decision-support tasks, their internal representations of people, organisations, relationships, and ideas influence how information is interpreted and surfaced.
     </p>
@@ -168,12 +166,12 @@
       Regulators often engage with these systems indirectly, evaluating outcomes and behaviours without access to model internals or proprietary architectures. Understanding how models form and maintain representational meaning therefore becomes a central consideration in oversight work.
     </p>
 
-    <h2>2. Purpose of this document</h2>
+    <h2>2. Purpose of This Document</h2>
     <p>
       This page presents how the EntityWorks formulation of AI Perception, as defined within the EntityWorks Standard, may be relevant to regulatory work. It describes the components of the Standard that relate to representational behaviour, outlines challenges regulators may encounter when evaluating such behaviour, and provides a structured reference for understanding how the Standard can be consulted.
     </p>
 
-    <h2>3. AI Perception and regulatory oversight</h2>
+    <h2>3. AI Perception and Regulatory Oversight</h2>
     <p>
       Within the EntityWorks Standard, AI Perception defines the conceptual structures and interpretive boundaries used to describe how AI systems form, update, and express representations of entities. These structures support consistent terminology and evaluative criteria that may assist regulators in contexts where representational behaviour influences outcomes, decisions, or information flows.
     </p>
@@ -181,53 +179,69 @@
       The discipline enables representational analysis without requiring access to model internals. Instead, it offers conceptual tools for examining externally observable behaviour, such as stability, consistency, and distinguishability of entity representations.
     </p>
 
-    <h2>4. Regulatory challenges addressed by the Standard</h2>
-    <p>Regulators may encounter challenges when assessing representational behaviour in AI systems, including:</p>
+    <h2>4. Regulatory Challenges Addressed by the Standard</h2>
+    <p>Regulators may encounter several challenges when assessing representational behaviour in AI systems. The EntityWorks Standard provides terminology and structural clarity that can support understanding in these areas, including:</p>
 
     <ul>
-      <li>interpretive opacity</li>
-      <li>inconsistent or unstable representations</li>
-      <li>cross-model divergence</li>
-      <li>limited evaluative criteria</li>
-      <li>representational drift</li>
+      <li>interpretive opacity — where the internal mechanisms behind a model’s understanding are not visible</li>
+      <li>inconsistent or unstable representations — which may affect reliability in regulated environments</li>
+      <li>cross-model divergence — where different systems form conflicting understandings of the same entity</li>
+      <li>limited evaluative criteria — making assessment difficult without a structured reference</li>
+      <li>representational drift — where understanding shifts over time without clear explanation</li>
     </ul>
 
-    <h2>5. How regulators may use the EntityWorks Standard</h2>
+    <h2>5. How Regulators May Use the EntityWorks Standard</h2>
     <p>
-      Regulators may consult the EntityWorks Standard when its terminology, structures, or evaluative components offer clarity within existing oversight frameworks. The Standard can support work in contexts where the behaviour of AI systems is relevant to regulatory duties, particularly where representational behaviour requires examination or consistent terminology assists communication across teams or institutions.
+      Regulators may consult the EntityWorks Standard when its terminology, structures, or evaluative components offer clarity within existing oversight frameworks. The Standard can support work in contexts where the behaviour of AI systems is relevant to regulatory duties, particularly where:
     </p>
+
+    <ul>
+      <li>representational behaviour requires examination</li>
+      <li>stable and consistent entity interpretation is important</li>
+      <li>cross-system comparisons are needed</li>
+      <li>structured terminology improves communication between teams or institutions</li>
+    </ul>
+
     <p>
       The Standard does not prescribe regulatory practice. It provides a formal reference that regulators may draw on where applicable.
     </p>
 
-    <h2>6. What the Standard provides to regulators</h2>
-    <p>The EntityWorks Standard includes components that may support regulatory understanding of representational behaviour:</p>
+    <h2>6. What the Standard Provides to Regulators</h2>
+    <p>
+      The EntityWorks Standard includes several components that may be relevant to regulatory understanding of representational behaviour:
+    </p>
 
     <ul>
-      <li>canonical definitions establishing consistent terminology</li>
+      <li>canonical definitions that establish consistent terminology</li>
       <li>structural frameworks describing how machine-interpreted identity is formed</li>
       <li>diagnostic logic for discussing representational stability and behaviour</li>
       <li>accreditation criteria relevant to representational integrity</li>
-      <li>forthcoming machine-readable specifications for technical reference</li>
+      <li>forthcoming machine-readable specifications suitable for technical reference</li>
     </ul>
 
-    <h2>7. Next points of reference</h2>
-    <p>For regulators seeking further detail within the EntityWorks Standard, the following documents provide next points of reference:</p>
+    <p>
+      These components are defined within the Standard and may be consulted where their structure or clarity supports regulatory evaluation.
+    </p>
+
+    <h2>7. Next Points of Reference</h2>
+    <p>
+      For regulators seeking further detail, the following documents within the EntityWorks Standard provide formal entry points:
+    </p>
 
     <ul>
-      <li><strong><a href="/the-standard.html">The Standard</a></strong> — structural, diagnostic, and governance criteria relevant to representational behaviour</li>
-      <li><strong><a href="/ai-perception.html">AI Perception</a></strong> — the disciplinary formulation describing how AI systems form and maintain their understanding of entities</li>
-      <li><strong><a href="/publications.html">Publications</a></strong> — papers and resources that expand theoretical and regulatory applications of the discipline</li>
+      <li><a href="/the-standard.html">The Standard</a> — the structural, diagnostic, and governance criteria relevant to representational behaviour</li>
+      <li><a href="/ai-perception.html">AI Perception</a> — the disciplinary formulation describing how AI systems form and maintain their understanding of entities</li>
+      <li><a href="/publications.html">Publications</a> — papers and resources that expand the theoretical and practical applications of the discipline</li>
     </ul>
 
     <p>
       Regulators may also contact the EntityWorks Standards Office for clarification of material defined within the Standard.
     </p>
 
-    <h2>8. Document control</h2>
+    <h2>8. Document Control</h2>
     <p>
       Document Title: For Regulators — Overview<br>
-      Standard Identifier: EW-REG-Overview-v1.1<br>
+      Identifier: EW-REG-Overview-v1.1<br>
       Version: v1.1<br>
       Status: Published<br>
       Publication Date: 2025-12-05<br>
