--- a/publications.html
+++ b/publications.html
@@ -179,7 +179,7 @@
     </p>
     <ul>
       <li>
-        <strong>AI Perception — Human-Facing Edition (v1.1)</strong><br>
+        <strong><a href="/ai-perception.html">AI Perception — Human-Facing Edition (v1.1)</a></strong><br>
         The disciplinary foundation describing how AI systems form, maintain, and express their understanding of entities.
       </li>
     </ul>
@@ -258,8 +258,8 @@
       For further exploration of the EntityWorks Standard:
     </p>
     <ul>
-      <li><strong>The Standard</strong> — structural, diagnostic, and governance criteria for representational behaviour</li>
-      <li><strong>AI Perception</strong> — the foundational discipline describing how AI systems understand entities</li>
+      <li><strong><a href="/the-standard.html">The Standard</a></strong> — structural, diagnostic, and governance criteria for representational behaviour</li>
+      <li><strong><a href="/ai-perception.html">AI Perception</a></strong> — the foundational discipline describing how AI systems understand entities</li>
     </ul>
     <p>
       Requests for clarification or interpretive guidance may be directed to the EntityWorks Standards Office
@@ -276,7 +276,7 @@
     fetch("/footer.html")
       .then(response => response.text())
       .then(html => {
-        document.getElementById("footer").innerHTML = html;
+        document.getElementById("footer").innerHTML = html>;
       });
   </script>
 
