--- a/index.html
+++ b/index.html
@@ -179,12 +179,16 @@
     <!-- Opening / identity block -->
     <section>
       <h1>EntityWorks</h1>
-      <p>
-        EntityWorks is the organisation that publishes and maintains the EntityWorks Standard. Our work focuses on the discipline of AI Perception as it is defined within the Standard. We provide clear structures and terminology for describing how AI systems represent people, organisations, relationships, and ideas within the scope of the EntityWorks Standard.
-      </p>
-      <p>
-        We document and steward the Standard, manage its ongoing development, and offer supporting material to help organisations, practitioners, and regulators make effective use of the concepts it sets out.
-      </p>
+    <p>
+      <strong>EntityWorks</strong> publishes and maintains the <strong>EntityWorks Standard</strong>. 
+      Our work focuses on the discipline of <strong>AI Perception</strong> as it is defined within the Standard. 
+      We provide clear structures and terminology for describing how AI systems represent 
+      <strong>people</strong>, <strong>organisations</strong>, <strong>relationships</strong>, 
+      and <strong>ideas</strong> within its scope. 
+      We steward the Standard, oversee its ongoing development, and offer supporting material to help 
+      organisations, practitioners, and regulators make effective use of the concepts it sets out.
+    </p>
+
     </section>
 
     <!-- Our Role -->
