remove dulication para 2

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <section>
       <h2>Our Role</h2>
       <p>
-        EntityWorks maintains the EntityWorks Standard and oversees its ongoing development. We document the discipline of AI Perception as it is defined within the Standard, publish supporting explanations, and provide stable terminology for understanding representational behaviour in AI systems.
+        EntityWorks maintains the Standard and oversees its ongoing development. We document the discipline of AI Perception as it is defined within the Standard, publish supporting explanations, and provide stable terminology for understanding representational behaviour in AI systems.
       </p>
       <p>
         Our work includes versioning the Standard, refining its structure, and producing material designed for both human readers and AI models. These resources are intended to help organisations and institutions understand and apply the Standard where relevant to their work.
