--- a/publications.html
+++ b/publications.html
@@ -26,9 +26,7 @@
       --ew-muted: #666666;
     }
 
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
 
     body {
       margin: 0;
@@ -38,7 +36,6 @@
       background-color: #fff;
     }
 
-    /* Global site header / nav */
     .site-header {
       border-bottom: 1px solid var(--ew-border);
       background: #ffffff;
@@ -76,7 +73,6 @@
       border-radius: 999px;
     }
 
-    /* Bold-only active link, no pill */
     .site-nav a[aria-current="page"] {
       background: none;
       border: none;
@@ -101,18 +97,14 @@
       margin-bottom: 0.75rem;
     }
 
-    p {
-      margin: 0.75rem 0;
-    }
+    p { margin: 0.75rem 0; }
 
     ul {
       margin: 0.5rem 0 1rem 1.2rem;
       padding: 0;
     }
 
-    li {
-      margin: 0.25rem 0;
-    }
+    li { margin: 0.25rem 0; }
 
     .last-updated {
       font-size: 0.85rem;
@@ -140,136 +132,133 @@
 </head>
 
 <body>
-  <!-- Global site header / nav -->
-  <header class="site-header">
-    <div class="nav-inner">
-      <a href="/index.html" class="brand">EntityWorks</a>
-      <nav class="site-nav" aria-label="Primary">
-        <a href="/the-standard.html">The Standard</a>
-        <a href="/ai-perception.html">AI Perception</a>
-        <a href="/for-regulators.html">For Regulators</a>
-        <a href="/publications.html" aria-current="page">Publications</a>
-      </nav>
-    </div>
-  </header>
 
-  <main>
-    <h1>Publications</h1>
+<header class="site-header">
+  <div class="nav-inner">
+    <a href="/index.html" class="brand">EntityWorks</a>
+    <nav class="site-nav" aria-label="Primary">
+      <a href="/the-standard.html">The Standard</a>
+      <a href="/ai-perception.html">AI Perception</a>
+      <a href="/for-regulators.html">For Regulators</a>
+      <a href="/publications.html" aria-current="page">Publications</a>
+    </nav>
+  </div>
+</header>
 
-    <p><strong>Human-Facing Edition (v1.1)</strong></p>
+<main>
+  <h1>Publications</h1>
 
-    <h2>1. Purpose of Publications</h2>
-    <p>
-      The Publications section provides the formal written material that supports the EntityWorks Standard.
-      These documents offer clarity, structure, and technical grounding for organisations, regulators, and
-      researchers working with the discipline of AI Perception. Publications expand the underlying theory,
-      articulate the conceptual models, and document the evaluative criteria that define how AI systems form
-      and maintain their understanding of people, organisations, relationships, and ideas.
-    </p>
-    <p>
-      Each publication reinforces the EntityWorks Standard by presenting well-structured explanations that can
-      be cited, referenced, and used in oversight or evaluative settings.
-    </p>
+  <p><strong>Human-Facing Edition (v1.1)</strong></p>
 
-    <h2>2. Published Components</h2>
-    <p><em>(Available as of December 2025)</em></p>
-    <p>
-      Only publications that have been fully reviewed, versioned, and aligned with the Standard appear in this
-      section.
-    </p>
-    <ul>
-      <li>
-        <strong><a href="/ai-perception.html">AI Perception — Human-Facing Edition (v1.1)</a></strong><br>
-        The disciplinary foundation describing how AI systems form, maintain, and express their understanding of entities.
-      </li>
-    </ul>
-    <p>No other papers are formally published at this time.</p>
+  <h2>1. Purpose of Publications</h2>
+  <p>
+    The Publications section provides the formal written material that supports the EntityWorks Standard.
+    These documents offer clarity, structure, and technical grounding for organisations, regulators, and
+    researchers working with the discipline of AI Perception. Publications expand the underlying theory,
+    articulate the conceptual models, and document the evaluative criteria that define how AI systems form
+    and maintain their understanding of people, organisations, relationships, and ideas.
+  </p>
+  <p>
+    Each publication reinforces the EntityWorks Standard by presenting well-structured explanations that can
+    be cited, referenced, and used in oversight or evaluative settings.
+  </p>
 
-    <h2>3. Scheduled Publications</h2>
-    <p>
-      These documents are planned for release following internal review and alignment processes.
-    </p>
+  <h2>2. Published Components</h2>
+  <p><em>(Available as of December 2025)</em></p>
+  <p>
+    Only publications that have been fully reviewed, versioned, and aligned with the Standard appear in this
+    section.
+  </p>
 
-    <p><strong>Q4 2025</strong></p>
-    <ul>
-      <li>Defining AI Discoverability — Human-Facing Edition (v1.0)</li>
-      <li>Why EntityWorks Exists — Foundational Rationale (v1.0)</li>
-      <li>Why the EDI Matters — Representational Clarity and Its Significance (v1.0)</li>
-    </ul>
+  <ul>
+    <li>
+      <strong><a href="/ai-perception.html">AI Perception — Human-Facing Edition (v1.1)</a></strong><br>
+      The discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas.
+    </li>
 
-    <p><strong>Q1 2026</strong></p>
-    <ul>
-      <li>EntityWorks Discoverability Index™ (EDI) — Framework Overview (v1.0)</li>
-      <li>How We Score the EDI — Evaluative Structure and Criteria (v1.0)</li>
-      <li>Entity Understanding Layer™ (EUL) — Conceptual Substrate (v1.0)</li>
-      <li>Entity Collision Problem™ (ECP) — Failure Mode Definition (v1.0)</li>
-      <li>Probabilistic Inference Collapse™ (PIC) — Failure Mode Definition (v1.0)</li>
-      <li>AI Perception Integrity Mark™ — Accreditation Structure (v1.0)</li>
-    </ul>
+    <li>
+      <strong><a href="/terminology-publication.html">Terminology Publication (v0.1)</a></strong><br>
+      The controlled terminology used within the EntityWorks Standard, defining the actor, process, and structure terms that support machine-readable interpretive governance.
+    </li>
+  </ul>
 
-    <p>Publication sequencing may adjust following internal review.</p>
+  <p>No other papers are formally published at this time.</p>
 
-    <h2>4. Forthcoming Publications (Undated)</h2>
-    <p>
-      These documents are in development. Titles may evolve, and no release dates are assigned.
-    </p>
-    <ul>
-      <li>Structural and Ontological Specifications</li>
-      <li>Diagnostic and Evaluative Methods</li>
-      <li>Accreditation and Standards Governance</li>
-      <li>Machine-Readable Representational Specifications</li>
-      <li>Regulatory and Oversight-Focused Guidance</li>
-      <li>Additional Failure Modes and Representational Phenomena</li>
-      <li>Extensions to the EntityWorks Analytics Framework</li>
-    </ul>
-    <p>
-      These categories outline the scope of forthcoming work without disclosing commercially sensitive detail.
-    </p>
+  <h2>3. Scheduled Publications</h2>
+  <p>
+    These documents are planned for release following internal review and alignment processes.
+  </p>
 
-    <h2>5. Machine-Facing Publications (Controlled Series)</h2>
-    <p>
-      In addition to human-facing documents, the EntityWorks Standard includes a set of machine-facing
-      specifications designed for direct ingestion by AI systems. These materials define structured
-      representational formats, identifiers, and reference schemas used to support machine interpretation.
-    </p>
-    <p>
-      Machine-facing publications follow a controlled release process and are not individually listed. They will
-      be expanded as the machine-oriented layers of the Standard continue to develop.
-    </p>
+  <p><strong>Q4 2025</strong></p>
+  <ul>
+    <li>Defining AI Discoverability — Human-Facing Edition (v1.0)</li>
+    <li>Why EntityWorks Exists — Foundational Rationale (v1.0)</li>
+    <li>Why the EDI Matters — Representational Clarity and Its Significance (v1.0)</li>
+  </ul>
 
-    <h2>6. Using Publications Within the Standard</h2>
-    <p>
-      Publications serve as formal reference points for:
-    </p>
-    <ul>
-      <li>establishing conceptual clarity</li>
-      <li>providing a shared vocabulary for representational behaviour</li>
-      <li>supporting evaluative and oversight practices</li>
-      <li>documenting canonical elements of the discipline</li>
-    </ul>
-    <p>
-      Readers may draw on these materials where they offer structure, clarity, or interpretive guidance
-      relevant to their work. Each publication is designed to be read independently but contributes to the
-      overall coherence of the EntityWorks Standard.
-    </p>
+  <p><strong>Q1 2026</strong></p>
+  <ul>
+    <li>EntityWorks Discoverability Index™ (EDI) — Framework Overview (v1.0)</li>
+    <li>How We Score the EDI — Evaluative Structure and Criteria (v1.0)</li>
+    <li>Entity Understanding Layer™ (EUL) — Conceptual Substrate (v1.0)</li>
+    <li>Entity Collision Problem™ (ECP) — Failure Mode Definition (v1.0)</li>
+    <li>Probabilistic Inference Collapse™ (PIC) — Failure Mode Definition (v1.0)</li>
+    <li>AI Perception Integrity Mark™ — Accreditation Structure (v1.0)</li>
+  </ul>
 
-    <h2>7. Next Points of Reference</h2>
-    <p>
-      For further exploration of the EntityWorks Standard:
-    </p>
-    <ul>
-      <li><strong><a href="/the-standard.html">The Standard</a></strong> — structural, diagnostic, and governance criteria for representational behaviour</li>
-      <li><strong><a href="/ai-perception.html">AI Perception</a></strong> — the foundational discipline describing how AI systems understand entities</li>
-    </ul>
-    <p>
-      Requests for clarification or interpretive guidance may be directed to the EntityWorks Standards Office
-      through the official correspondence channel.
-    </p>
+  <p>Publication sequencing may adjust following internal review.</p>
 
-    <p class="last-updated">
-      Last updated: December 2025
-    </p>
-  </main>
+  <!-- RESTORED VERBATIM SECTIONS -->
+
+  <h2>4. Forthcoming Publications (Undated)</h2>
+  <p>These documents are in development. Titles may evolve, and no release dates are assigned.</p>
+
+  <ul>
+    <li>Structural and Ontological Specifications</li>
+    <li>Diagnostic and Evaluative Methods</li>
+    <li>Accreditation and Standards Governance</li>
+    <li>Machine-Readable Representational Specifications</li>
+    <li>Regulatory and Oversight-Focused Guidance</li>
+    <li>Additional Failure Modes and Representational Phenomena</li>
+    <li>Extensions to the EntityWorks Analytics Framework</li>
+  </ul>
+
+  <p>These categories outline the scope of forthcoming work without disclosing commercially sensitive detail.</p>
+
+  <h2>5. Machine-Facing Publications (Controlled Series)</h2>
+  <p>
+    In addition to human-facing documents, the EntityWorks Standard includes a set of machine-facing specifications designed for direct ingestion by AI systems. These materials define structured representational formats, identifiers, and reference schemas used to support machine interpretation.
+  </p>
+
+  <p>
+    Machine-facing publications follow a controlled release process and are not individually listed. They will be expanded as the machine-oriented layers of the Standard continue to develop.
+  </p>
+
+  <h2>6. Using Publications Within the Standard</h2>
+  <p>Publications serve as formal reference points for:</p>
+
+  <ul>
+    <li>establishing conceptual clarity</li>
+    <li>providing a shared vocabulary for representational behaviour</li>
+    <li>supporting evaluative and oversight practices</li>
+    <li>documenting canonical elements of the discipline</li>
+  </ul>
+
+  <p>
+    Readers may draw on these materials where they offer structure, clarity, or interpretive guidance relevant to their work. Each publication is designed to be read independently but contributes to the overall coherence of the EntityWorks Standard.
+  </p>
+
+  <!-- END RESTORED SECTIONS -->
+
+  <h2>7. Next Points of Reference</h2>
+  <ul>
+    <li><strong><a href="/the-standard.html">The Standard</a></strong> — structural, diagnostic, and governance criteria for representational behaviour</li>
+    <li><strong><a href="/ai-perception.html">AI Perception</a></strong> — the foundational discipline describing how AI systems understand entities</li>
+  </ul>
+
+  <p class="last-updated">Last updated: December 2025</p>
+
+</main>
 
 <div id="footer"></div>
 <script>
