Added Entity Publisher

--- a/terminology-publication.html
+++ b/terminology-publication.html
@@ -285,6 +285,23 @@
 
   <p><strong>Cross-references:</strong> Representational Structures, Entity Discoverability Index, Entity Collision Problem.</p>
 
+  <!-- INSERTED TERM: ENTITY PUBLISHER -->
+
+  <p><strong>Entity Publisher</strong></p>
+  <p><em>Definition v0.1</em><br>
+  An actor (such as a person, organisation, or system) that makes publicly accessible digital information available in a form that may be ingested by AI systems to form or update representations of people, organisations, relationships, or ideas.</p>
+
+  <p><strong>Purpose:</strong><br>
+  To provide a neutral role term within the EntityWorks Standard for actors whose published material contributes to machine-formed representations.</p>
+
+  <p><strong>Scope:</strong><br>
+  Applies to individuals, organisations, automated systems, or platforms that emit public digital information in any format.</p>
+
+  <p><strong>Cross-references:</strong><br>
+  EntityWorks Standard, Entity Understanding Layer, Entity Discoverability Index.</p>
+
+  <!-- END INSERTED TERM -->
+
   <p><strong>EntityWorks Analytics</strong></p>
   <p><em>Definition v0.1</em><br>
   EntityWorks Analytics is the analytical framework used to evaluate the structural, interpretive, and representational
