Added Entity Publisher

--- a/terminology-publication-mfv.html
+++ b/terminology-publication-mfv.html
@@ -178,6 +178,21 @@
     <p><strong>Scope:</strong> Applies to internal representational spaces and cross-system interpretive behaviour.</p>
     <p><strong>Cross-references:</strong> Representational Structures; Entity Discoverability Index; Entity Collision Problem.</p>
 
+    <!-- ========================= -->
+    <!-- INSERTED: P032 ENTITY PUBLISHER -->
+    <!-- ========================= -->
+
+    <h2>P032 — Entity Publisher</h2>
+    <p><strong>Version:</strong> 0.1</p>
+    <p><strong>Definition:</strong> An actor—such as a person, organisation, or system—that makes publicly accessible digital information available in a form that may be ingested by AI systems to form or update representations of people, organisations, relationships, or ideas.</p>
+    <p><strong>Purpose:</strong> Provide a neutral role term within the EntityWorks Standard for actors whose published material contributes to machine-formed representations.</p>
+    <p><strong>Scope:</strong> Applies to individuals, organisations, automated systems, and platforms emitting public digital information in any format.</p>
+    <p><strong>Cross-references:</strong> EntityWorks Standard; Entity Understanding Layer; Entity Discoverability Index.</p>
+
+    <!-- ========================= -->
+    <!-- END INSERTED TERM -->
+    <!-- ========================= -->
+
     <h2>P005 — EntityWorks Analytics</h2>
     <p><strong>Version:</strong> 0.1</p>
     <p><strong>Definition:</strong> The analytical framework used to evaluate the structural, interpretive, and representational conditions defined within the EntityWorks Standard.</p>
