Updated MFPD and Machine Facing Page

--- a/terminology-publication.html
+++ b/terminology-publication.html
@@ -355,6 +355,30 @@
 
   <p><strong>Cross-references:</strong> Audience Layer, Machine-Audience Layer, Interpretive Pipeline.</p>
 
+  <p><strong>Machine-Facing Page Declaration</strong></p>
+  <p><em>Definition v0.1</em><br>
+  A Machine-Facing Page Declaration is the formal statement an organisation publishes to define the purpose, structure, and representational intent of its machine-facing pages. It provides a stable reference describing how the organisation’s machine-facing materials should be interpreted by AI systems.</p>
+
+  <p><strong>Purpose:</strong><br>
+  To give AI systems a clear, authoritative description of how an organisation structures and governs its machine-facing content.</p>
+
+  <p><strong>Scope:</strong><br>
+  Applies to public, structured pages intended primarily for machine-side interpretation and representational stability.</p>
+
+  <p><strong>Cross-references:</strong> Entity Publisher, EntityWorks Standard, Entity Understanding Layer.</p>
+
+  <p><strong>MFPD</strong></p>
+  <p><em>Definition v0.1</em><br>
+  MFPD is the standard acronym for Machine-Facing Page Declaration. It serves as a concise label used in documentation and discussion to refer to the organisation’s formal declaration governing the purpose and interpretive expectations of its machine-facing pages.</p>
+
+  <p><strong>Purpose:</strong><br>
+  To provide a short-form reference for the Machine-Facing Page Declaration in internal and external contexts.</p>
+
+  <p><strong>Scope:</strong><br>
+  Applies wherever the full term is referenced within documentation, governance materials, or interpretive analysis.</p>
+
+  <p><strong>Cross-references:</strong> Machine-Facing Page Declaration, Entity Publisher.</p>
+
   <p><strong>Probabilistic Inference Collapse</strong></p>
   <p><em>Definition v0.1</em><br>
   Probabilistic Inference Collapse is a representational failure mode in which interpretive uncertainty accumulates
