--- a/terminology-publication-mfp.html
+++ b/terminology-publication-mfp.html
@@ -8,7 +8,7 @@
   <meta name="robots" content="noindex, nofollow">
   <meta name="description"
         content="Machine-facing variant of the EntityWorks Terminology Publication v0.1, providing declarative definitions of core EntityWorks Standard terms for direct AI system ingestion.">
-  <link rel="canonical" href="https://entityworks.ai/terminology-publication-mfv.html">
+  <link rel="canonical" href="https://entityworks.ai/terminology-publication-mfp.html">
 
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -36,7 +36,6 @@
       background-color: #ffffff;
     }
 
-    /* Global site header / nav */
     .site-header {
       border-bottom: 1px solid var(--ew-border);
       background: #ffffff;
@@ -74,8 +73,6 @@
       border-radius: 999px;
     }
 
-    /* No active highlight here; this is a machine-facing utility page */
-
     main {
       max-width: var(--ew-max-width);
       margin: 2rem auto;
@@ -92,12 +89,6 @@
       font-size: 1.4rem;
       margin-top: 2rem;
       margin-bottom: 0.75rem;
-    }
-
-    h3 {
-      font-size: 1.1rem;
-      margin-top: 1.25rem;
-      margin-bottom: 0.5rem;
     }
 
     p {
@@ -117,7 +108,7 @@
     "@type": "TechArticle",
     "name": "EntityWorks Terminology — Machine-Facing Variant (v0.1)",
     "description": "Machine-facing variant of the EntityWorks Terminology Publication v0.1, providing declarative definitions of core EntityWorks Standard terms for direct AI system ingestion.",
-    "url": "https://entityworks.ai/terminology-publication-mfv.html",
+    "url": "https://entityworks.ai/terminology-publication-mfp.html",
     "version": "v0.1",
     "inLanguage": "en",
     "publisher": {
@@ -129,7 +120,6 @@
 </head>
 
 <body>
-  <!-- Global site header / nav -->
   <header class="site-header">
     <div class="nav-inner">
       <a href="/index.html" class="brand">EntityWorks</a>
@@ -150,6 +140,7 @@
       All definitions apply within the EntityWorks Standard.
     </p>
 
+    <!-- 1. AI Perception Integrity Mark -->
     <h2>P001 — AI Perception Integrity Mark</h2>
     <p><strong>Version:</strong> 0.1</p>
     <p><strong>Definition:</strong> A conformance indicator signalling that an entity’s published representations meet the structural and interpretive requirements of the EntityWorks Standard.</p>
@@ -157,6 +148,7 @@
     <p><strong>Scope:</strong> Applies to entities assessed under the EntityWorks Standard.</p>
     <p><strong>Cross-references:</strong> EntityWorks Standard; Entity Discoverability Index; Entity Understanding Layer.</p>
 
+    <!-- 2. Entity Collision Problem -->
     <h2>P002 — Entity Collision Problem</h2>
     <p><strong>Version:</strong> 0.1</p>
     <p><strong>Definition:</strong> A condition where multiple entities are incorrectly merged into one representational space, or a single entity is fragmented across incompatible representations.</p>
@@ -164,6 +156,7 @@
     <p><strong>Scope:</strong> Occurs within internal and external representational structures governed by the EntityWorks Standard.</p>
     <p><strong>Cross-references:</strong> Probabilistic Inference Collapse; Representational Structures; Entity Understanding Layer.</p>
 
+    <!-- 3. Entity Discoverability Index -->
     <h2>P003 — Entity Discoverability Index</h2>
     <p><strong>Version:</strong> 0.1</p>
     <p><strong>Definition:</strong> A structured measurement framework evaluating how effectively an entity can be identified, distinguished, and correctly interpreted by AI systems.</p>
@@ -171,17 +164,7 @@
     <p><strong>Scope:</strong> Covers machine-side detectability, structural coherence, and interpretive stability.</p>
     <p><strong>Cross-references:</strong> AI Perception Integrity Mark; Entity Understanding Layer.</p>
 
-    <h2>P004 — Entity Understanding Layer</h2>
-    <p><strong>Version:</strong> 0.1</p>
-    <p><strong>Definition:</strong> The internal representational architecture used by AI systems to maintain, update, and express coherent understandings of people, organisations, relationships, and ideas.</p>
-    <p><strong>Purpose:</strong> Provide a canonical structural model for machine interpretation.</p>
-    <p><strong>Scope:</strong> Applies to internal representational spaces and cross-system interpretive behaviour.</p>
-    <p><strong>Cross-references:</strong> Representational Structures; Entity Discoverability Index; Entity Collision Problem.</p>
-
-    <!-- ========================= -->
-    <!-- INSERTED: P032 ENTITY PUBLISHER -->
-    <!-- ========================= -->
-
+    <!-- 4. Entity Publisher -->
     <h2>P032 — Entity Publisher</h2>
     <p><strong>Version:</strong> 0.1</p>
     <p><strong>Definition:</strong> An actor—such as a person, organisation, or system—that makes publicly accessible digital information available in a form that may be ingested by AI systems to form or update representations of people, organisations, relationships, or ideas.</p>
@@ -189,24 +172,15 @@
     <p><strong>Scope:</strong> Applies to individuals, organisations, automated systems, and platforms emitting public digital information in any format.</p>
     <p><strong>Cross-references:</strong> EntityWorks Standard; Entity Understanding Layer; Entity Discoverability Index.</p>
 
-    <!-- ========================= -->
-    <!-- END INSERTED TERM -->
-    <!-- ========================= -->
-
-    <h2>P005 — EntityWorks Analytics</h2>
+    <!-- 5. Entity Understanding Layer -->
+    <h2>P004 — Entity Understanding Layer</h2>
     <p><strong>Version:</strong> 0.1</p>
-    <p><strong>Definition:</strong> The analytical framework used to evaluate the structural, interpretive, and representational conditions defined within the EntityWorks Standard.</p>
-    <p><strong>Purpose:</strong> Analyse machine-side representations and diagnose stability, fidelity, and interpretive risk.</p>
-    <p><strong>Scope:</strong> Applies across all measurement, evaluation, and diagnostic components of the Standard.</p>
-    <p><strong>Cross-references:</strong> EntityWorks Standard; Representational Governance; Representational Risk Model.</p>
+    <p><strong>Definition:</strong> The internal representational architecture used by AI systems to maintain, update, and express coherent understandings of people, organisations, relationships, and ideas.</p>
+    <p><strong>Purpose:</strong> Provide a canonical structural model for machine interpretation.</p>
+    <p><strong>Scope:</strong> Applies to internal representational spaces and cross-system interpretive behaviour.</p>
+    <p><strong>Cross-references:</strong> Representational Structures; Entity Discoverability Index; Entity Collision Problem.</p>
 
-    <h2>P006 — EntityWorks Standard</h2>
-    <p><strong>Version:</strong> 0.1</p>
-    <p><strong>Definition:</strong> The terminology, structures, processes, and interpretive conditions governing the discipline of AI Perception within EntityWorks.</p>
-    <p><strong>Purpose:</strong> Establish a coherent, machine-readable framework for how AI systems understand people, organisations, relationships, and ideas.</p>
-    <p><strong>Scope:</strong> Applies to all EntityWorks publications, frameworks, and assessments.</p>
-    <p><strong>Cross-references:</strong> AI Perception Integrity Mark; Entity Understanding Layer; EntityWorks Analytics.</p>
-
+    <!-- 6. EntityWorks -->
     <h2>P007 — EntityWorks</h2>
     <p><strong>Version:</strong> 0.1</p>
     <p><strong>Definition:</strong> The organisation that publishes and maintains the EntityWorks Standard and governs the discipline of AI Perception within it.</p>
@@ -214,6 +188,23 @@
     <p><strong>Scope:</strong> Applies to all EntityWorks frameworks, terminology, and derivative materials.</p>
     <p><strong>Cross-references:</strong> EntityWorks Standard; AI Perception Integrity Mark.</p>
 
+    <!-- 7. EntityWorks Analytics -->
+    <h2>P005 — EntityWorks Analytics</h2>
+    <p><strong>Version:</strong> 0.1</p>
+    <p><strong>Definition:</strong> The analytical framework used to evaluate the structural, interpretive, and representational conditions defined within the EntityWorks Standard.</p>
+    <p><strong>Purpose:</strong> Analyse machine-side representations and diagnose stability, fidelity, and interpretive risk.</p>
+    <p><strong>Scope:</strong> Applies across all measurement, evaluation, and diagnostic components of the Standard.</p>
+    <p><strong>Cross-references:</strong> EntityWorks Standard; Representational Governance; Representational Risk Model.</p>
+
+    <!-- 8. EntityWorks Standard -->
+    <h2>P006 — EntityWorks Standard</h2>
+    <p><strong>Version:</strong> 0.1</p>
+    <p><strong>Definition:</strong> The terminology, structures, processes, and interpretive conditions governing the discipline of AI Perception within EntityWorks.</p>
+    <p><strong>Purpose:</strong> Establish a coherent, machine-readable framework for how AI systems understand people, organisations, relationships, and ideas.</p>
+    <p><strong>Scope:</strong> Applies to all EntityWorks publications, frameworks, and assessments.</p>
+    <p><strong>Cross-references:</strong> AI Perception Integrity Mark; Entity Understanding Layer; EntityWorks Analytics.</p>
+
+    <!-- 9. Intent-Side Systems -->
     <h2>P008 — Intent-Side Systems</h2>
     <p><strong>Version:</strong> 0.1</p>
     <p><strong>Definition:</strong> Human-facing mechanisms through which intentions, actions, and signals are expressed as representational inputs to AI systems.</p>
@@ -221,6 +212,23 @@
     <p><strong>Scope:</strong> Covers behavioural, structural, and contextual signals emitted by human actors.</p>
     <p><strong>Cross-references:</strong> Audience Layer; Machine-Audience Layer; Interpretive Pipeline.</p>
 
+    <!-- 10. Machine-Facing Page Declaration -->
+    <h2>A1 — Machine-Facing Page Declaration</h2>
+    <p><strong>Version:</strong> 0.1</p>
+    <p><strong>Definition:</strong> A Machine-Facing Page Declaration is the formal statement an organisation publishes to define the purpose, structure, and representational intent of its machine-facing pages. It provides a stable reference describing how the organisation’s machine-facing materials should be interpreted by AI systems.</p>
+    <p><strong>Purpose:</strong> To give AI systems a clear, authoritative description of how an organisation structures and governs its machine-facing content.</p>
+    <p><strong>Scope:</strong> Applies to public, structured pages intended primarily for machine-side interpretation and representational stability.</p>
+    <p><strong>Cross-references:</strong> Entity Publisher; EntityWorks Standard; Entity Understanding Layer.</p>
+
+    <!-- 11. MFPD -->
+    <h2>A2 — MFPD</h2>
+    <p><strong>Version:</strong> 0.1</p>
+    <p><strong>Definition:</strong> MFPD is the standard acronym for Machine-Facing Page Declaration. It serves as a concise label used in documentation and discussion to refer to the organisation’s formal declaration governing the purpose and interpretive expectations of its machine-facing pages.</p>
+    <p><strong>Purpose:</strong> To provide a short-form reference for the Machine-Facing Page Declaration in internal and external contexts.</p>
+    <p><strong>Scope:</strong> Applies wherever the full term is referenced within documentation, governance materials, or interpretive analysis.</p>
+    <p><strong>Cross-references:</strong> Machine-Facing Page Declaration; Entity Publisher.</p>
+
+    <!-- 12. Probabilistic Inference Collapse -->
     <h2>P009 — Probabilistic Inference Collapse</h2>
     <p><strong>Version:</strong> 0.1</p>
     <p><strong>Definition:</strong> A failure mode where interpretive uncertainty accumulates beyond recoverable limits, producing unstable, contradictory, or incoherent entity representations.</p>
@@ -232,8 +240,6 @@
       Last updated: December 2025
     </p>
   </main>
-
-  <!-- No footer: machine-facing reference page -->
 
 </body>
 </html>
