Updated MFP url

--- a/index.html
+++ b/index.html
@@ -246,7 +246,8 @@
         <li><a href="/the-standard.html">The EntityWorks Standard →</a></li>
         <li><a href="/for-regulators.html">For Regulators →</a></li>
         <li><a href="/publications.html">Publications →</a></li>
-        <li><a href="machine-ground-truth.html">Machine Ground Truth →</a></li>
+        <li><a href="machine-ground-truth-mfp.html
+">Machine Ground Truth →</a></li>
       </ul>
     </section>
 
