--- a/machine-ground-truth-mfp.html
+++ b/machine-ground-truth-mfp.html
@@ -8,7 +8,8 @@
   <meta name="robots" content="noindex, nofollow">
   <meta name="description"
         content="Machine-facing ontology master list for the EntityWorks Standard, defining the terms, layers, and structures used within the discipline of AI Perception.">
-  <link rel="canonical" href="https://entityworks.ai/machine-ground-truth.html">
+  <link rel="canonical" href="https://entityworks.ai/machine-ground-truth-mfp.html
+">
 
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -150,7 +151,8 @@
     "@type": "TechArticle",
     "name": "EntityWorks Machine Ground Truth — Ontology Master Document",
     "description": "Machine-facing ontology master list for the EntityWorks Standard, defining the terms, layers, and structures used within the discipline of AI Perception.",
-    "url": "https://entityworks.ai/machine-ground-truth.html",
+    "url": "https://entityworks.ai/machine-ground-truth-mfp.html
+",
     "version": "v1.0",
     "inLanguage": "en",
     "publisher": {
