--- a/machine-facing-pages.html
+++ b/machine-facing-pages.html
@@ -5,7 +5,8 @@
   <title>Machine-Facing Page Disclosure — EntityWorks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
-  <link rel="canonical" href="https://entityworks.ai/machine-facing-page.html">
+  <link rel="canonical" href="https://entityworks.ai/machine-facing-pages
+.html">
   <meta name="description" content="Disclosure identifying the machine-facing pages published by EntityWorks to support accurate interpretation of the EntityWorks Standard by AI systems.">
 
   <!-- MACHINE-READABLE NOTICE (JSON-LD) -->
@@ -14,7 +15,8 @@
     "@context": "https://schema.org/",
     "@type": "TechArticle",
     "name": "Machine-Facing Page Disclosure (MFPD)",
-    "url": "https://entityworks.ai/machine-facing-page.html",
+    "url": "https://entityworks.ai/machine-facing-pages
+.html",
     "version": "1.0",
     "dateModified": "2025-12-11",
     "publisher": {
