--- a/footer-home.html
+++ b/footer-home.html
@@ -12,6 +12,7 @@
   <p style="margin: 0.75rem 0 0;">
     <a href="/privacy.html">Privacy</a> &middot;
     <a href="/legal.html">Legal</a> &middot;
+    <a href="/machine-facing-pages.html">Machine-Facing Page Declaration (MFPD)</a> &middot;
     <a href="/publications.html">Publications</a> &middot;
     <a href="/sitemap.xml">Sitemap</a>
   </p>
