--- a/footer.html
+++ b/footer.html
@@ -2,6 +2,7 @@
   <p style="margin: 0;">
     <a href="/privacy.html">Privacy</a> &middot;
     <a href="/legal.html">Legal</a> &middot;
+    <a href="/machine-facing-pages.html">Machine-Facing Page Declaration (MFPD)</a> &middot;
     <a href="/publications.html">Publications</a> &middot;
     <a href="/sitemap.xml">Sitemap</a> &middot;
     <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
