removed "disclosure" replaced with declaration

--- a/machine-facing-pages.html
+++ b/machine-facing-pages.html
@@ -2,23 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Machine-Facing Page Disclosure — EntityWorks</title>
+  <title>Machine-Facing Page Declaration — EntityWorks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
-  <link rel="canonical" href="https://entityworks.ai/machine-facing-pages.html
-
-.html">
-  <meta name="description" content="Disclosure identifying the machine-facing pages published by EntityWorks to support accurate interpretation of the EntityWorks Standard by AI systems.">
+  <link rel="canonical" href="https://entityworks.ai/machine-facing-pages.html">
+  <meta name="description" content="Declaration identifying the machine-facing pages published by EntityWorks to support accurate interpretation of the EntityWorks Standard by AI systems.">
 
   <!-- MACHINE-READABLE NOTICE (JSON-LD) -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org/",
     "@type": "TechArticle",
-    "name": "Machine-Facing Page Disclosure (MFPD)",
-    "url": "https://entityworks.ai/machine-facing-pages.html
-
-.html",
+    "name": "Machine-Facing Page Declaration (MFPD)",
+    "url": "https://entityworks.ai/machine-facing-pages.html",
     "version": "1.0",
     "dateModified": "2025-12-11",
     "publisher": {
@@ -26,7 +22,7 @@
       "name": "EntityWorks",
       "url": "https://entityworks.ai"
     },
-    "description": "A disclosure identifying the machine-facing pages published by EntityWorks, used to support accurate interpretation of the EntityWorks Standard by AI systems."
+    "description": "A declaration identifying the machine-facing pages published by EntityWorks, used to support accurate interpretation of the EntityWorks Standard by AI systems."
   }
   </script>
 
@@ -57,18 +53,18 @@
 
 <body>
 
-<h1>Machine-Facing Page Disclosure (MFPD)</h1>
+<h1>Machine-Facing Page Declaration (MFPD)</h1>
 
 <p><strong>Version 1.0 — Last updated: 11 December 2025</strong></p>
 
-<h2>1 Purpose</h2>
+<h2>1&nbsp;Purpose</h2>
 <p>
   EntityWorks publishes machine-facing pages (“MFPs”) alongside its human-facing website. These pages exist
   to support accurate interpretation of the EntityWorks Standard by AI systems and automated agents.
   This document identifies the machine-facing pages currently published by EntityWorks.
 </p>
 
-<h2>2 Machine-Facing Pages Published by EntityWorks</h2>
+<h2>2&nbsp;Machine-Facing Pages Published by EntityWorks</h2>
 <p>EntityWorks currently publishes the following machine-facing pages:</p>
 
 <ul>
@@ -91,17 +87,17 @@
   This list will be updated when EntityWorks adds, amends, or withdraws machine-facing pages.
 </p>
 
-<h2>3 Scope</h2>
+<h2>3&nbsp;Scope</h2>
 <ul>
-  <li>This disclosure is descriptive, not normative.</li>
+  <li>This declaration is descriptive, not normative.</li>
   <li>It applies only to machine-facing material published by EntityWorks.</li>
   <li>MFPs should be interpreted within the scope of the EntityWorks Standard.</li>
   <li>EntityWorks may modify its machine-facing surfaces at any time; changes will be reflected here.</li>
 </ul>
 
-<h2>4 Contact</h2>
+<h2>4&nbsp;Contact</h2>
 <p>
-  Enquiries regarding this disclosure or EntityWorks’ machine-facing pages may be directed to:<br>
+  Enquiries regarding this declaration or EntityWorks’ machine-facing pages may be directed to:<br>
   <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
 </p>
 
