Publish Entity Understanding Layer (EUL) v1.0

--- a/publications.html
+++ b/publications.html
@@ -180,9 +180,16 @@
       <strong><a href="/terminology-publication.html">Terminology Publication (v0.1)</a></strong><br>
       The controlled terminology used within the EntityWorks Standard, defining the actor, process, and structure terms that support machine-readable interpretive governance.
     </li>
-  </ul>
 
-  <p>No other papers are formally published at this time.</p>
+    <li>
+      <strong>
+        <a href="/publications/EntityUnderstandingLayer_v1.0.pdf">
+          Entity Understanding Layer (EUL) — Human-Facing Edition (v1.0)
+        </a>
+      </strong><br>
+      A formal definition of the entity-level interpretive architecture within the EntityWorks Standard, describing how entity meaning is structured, maintained, and referenced across AI-mediated systems.
+    </li>
+  </ul>
 
   <h2>3. Scheduled Publications</h2>
   <p>
@@ -200,7 +207,6 @@
   <ul>
     <li>EntityWorks Discoverability Index™ (EDI) — Framework Overview (v1.0)</li>
     <li>How We Score the EDI — Evaluative Structure and Criteria (v1.0)</li>
-    <li>Entity Understanding Layer™ (EUL) — Conceptual Substrate (v1.0)</li>
     <li>Entity Collision Problem™ (ECP) — Failure Mode Definition (v1.0)</li>
     <li>Probabilistic Inference Collapse™ (PIC) — Failure Mode Definition (v1.0)</li>
     <li>AI Perception Integrity Mark™ — Accreditation Structure (v1.0)</li>
