Add Failure Modes Volume I to publications

--- a/publications.html
+++ b/publications.html
@@ -189,6 +189,15 @@
       </strong><br>
       A formal definition of the entity-level interpretive architecture within the EntityWorks Standard, describing how entity meaning is structured, maintained, and referenced across AI-mediated systems.
     </li>
+
+    <li>
+  <a href="publications/failure-modes-volume-i-ecp-pic-v1.1.pdf">
+    <strong>Failure Modes — Volume I: Entity Collision Problem (ECP) &amp; Probabilistic Inference Collapse (PIC)</strong>
+  </a>
+  <br>
+  A formal exposition of two representational failure modes within the EntityWorks Standard, describing how entity identity and interpretive coherence can degrade across AI-mediated systems.
+</li>
+
   </ul>
 
   <h2>3. Scheduled Publications</h2>
