Add Entity Discoverability Index (EDI) v1.0 to publications

--- a/publications.html
+++ b/publications.html
@@ -198,6 +198,14 @@
   A formal exposition of two representational failure modes within the EntityWorks Standard, describing how entity identity and interpretive coherence can degrade across AI-mediated systems.
 </li>
 
+<li>
+  <a href="/publications/entity-discoverability-index-edi-v1.0.pdf">
+    Entity Discoverability Index (EDI) — Human-Facing Structural Edition (v1.0)
+  </a>
+  <br>
+  A structured evaluative index within the EntityWorks Standard for examining how clearly and consistently entities are identified, distinguished, and interpreted by AI-mediated systems, based on observable representational signals.
+</li>
+
   </ul>
 
   <h2>3. Scheduled Publications</h2>
