Bold the EDI Link

--- a/publications.html
+++ b/publications.html
@@ -200,7 +200,7 @@
 
 <li>
   <a href="/publications/entity-discoverability-index-edi-v1.0.pdf">
-    Entity Discoverability Index (EDI) — Human-Facing Structural Edition (v1.0)
+    <strong>Entity Discoverability Index (EDI) – Human-Facing Structural Edition (v1.0)</strong>
   </a>
   <br>
   A structured evaluative index within the EntityWorks Standard for examining how clearly and consistently entities are identified, distinguished, and interpreted by AI-mediated systems, based on observable representational signals.
