uploaded link for AIPM

--- a/publications.html
+++ b/publications.html
@@ -206,6 +206,11 @@
   A structured evaluative index within the EntityWorks Standard for examining how clearly and consistently entities are identified, distinguished, and interpreted by AI-mediated systems, based on observable representational signals.
 </li>
 
+<li>
+  <strong><a href="ai-perception-integrity-mark-aipm-v1.0.pdf">AI Perception Integrity Mark (AIPM) — Human-Facing Structural Edition (v1.0)</a></strong><br>
+  A conformance indicator within the EntityWorks Standard that signals whether an entity’s published representations meet the structural and interpretive conditions required for consistent machine understanding, without implying certification, enforcement, or regulatory authority.
+</li>
+
   </ul>
 
   <h2>3. Scheduled Publications</h2>
