--- a/publications.html
+++ b/publications.html
@@ -207,7 +207,11 @@
 </li>
 
 <li>
-  <strong><a href="ai-perception-integrity-mark-aipm-v1.0.pdf">AI Perception Integrity Mark (AIPM) — Human-Facing Structural Edition (v1.0)</a></strong><br>
+  <strong>
+    <a href="publications/ai-perception-integrity-mark-aipm-v1.0.pdf">
+      AI Perception Integrity Mark (AIPM) — Human-Facing Structural Edition (v1.0)
+    </a>
+  </strong><br>
   A conformance indicator within the EntityWorks Standard that signals whether an entity’s published representations meet the structural and interpretive conditions required for consistent machine understanding, without implying certification, enforcement, or regulatory authority.
 </li>
 
