EntityWorks Analytics Added

--- a/publications.html
+++ b/publications.html
@@ -215,6 +215,15 @@
   A conformance indicator within the EntityWorks Standard that signals whether an entity’s published representations meet the structural and interpretive conditions required for consistent machine understanding, without implying certification, enforcement, or regulatory authority.
 </li>
 
+<li>
+  <strong>
+    <a href="publications/entityworks-analytics-ewa-v1.0.pdf">
+      EntityWorks Analytics (EWA) — Human-Facing Structural Edition (v1.0)
+    </a>
+  </strong><br>
+  The analytical component of the EntityWorks Standard, defining how machine-side representations of entities are observed, interpreted, and analysed over time, without prescribing optimisation, tooling, or corrective action.
+</li>
+
   </ul>
 
   <h2>3. Scheduled Publications</h2>
