Reorder publications and surface MFP/MFPD white paper

--- a/publications.html
+++ b/publications.html
@@ -182,54 +182,43 @@
     </li>
 
     <li>
-      <strong>
-        <a href="/publications/EntityUnderstandingLayer_v1.0.pdf">
-          Entity Understanding Layer (EUL) — Human-Facing Edition (v1.0)
-        </a>
-      </strong><br>
+      <strong><a href="/publications/EntityUnderstandingLayer_v1.0.pdf">
+        Entity Understanding Layer (EUL) — Human-Facing Edition (v1.0)
+      </a></strong><br>
       A formal definition of the entity-level interpretive architecture within the EntityWorks Standard, describing how entity meaning is structured, maintained, and referenced across AI-mediated systems.
     </li>
 
     <li>
-  <a href="publications/failure-modes-volume-i-ecp-pic-v1.1.pdf">
-    <strong>Failure Modes — Volume I: Entity Collision Problem (ECP) &amp; Probabilistic Inference Collapse (PIC)</strong>
-  </a>
-  <br>
-  A formal exposition of two representational failure modes within the EntityWorks Standard, describing how entity identity and interpretive coherence can degrade across AI-mediated systems.
-</li>
+      <strong><a href="/publications/failure-modes-volume-i-ecp-pic-v1.1.pdf">
+        Failure Modes — Volume I: Entity Collision Problem (ECP) &amp; Probabilistic Inference Collapse (PIC)
+      </a></strong><br>
+      A formal exposition of two representational failure modes within the EntityWorks Standard, describing how entity identity and interpretive coherence can degrade across AI-mediated systems.
+    </li>
 
-<li>
-  <a href="/publications/entity-discoverability-index-edi-v1.0.pdf">
-    <strong>Entity Discoverability Index (EDI) – Human-Facing Structural Edition (v1.0)</strong>
-  </a>
-  <br>
-  A structured evaluative index within the EntityWorks Standard for examining how clearly and consistently entities are identified, distinguished, and interpreted by AI-mediated systems, based on observable representational signals.
-</li>
+    <li>
+      <strong><a href="/publications/entity-discoverability-index-edi-v1.0.pdf">
+        Entity Discoverability Index (EDI) — Human-Facing Structural Edition (v1.0)
+      </a></strong><br>
+      A structured evaluative index within the EntityWorks Standard for examining how clearly and consistently entities are identified, distinguished, and interpreted by AI-mediated systems, based on observable representational signals.
+    </li>
 
-<li>
-  <strong>
-    <a href="/publications/ai-perception-integrity-mark-aipm-v1.0.pdf">
-      AI Perception Integrity Mark (AIPM) — Human-Facing Structural Edition (v1.0)
-    </a>
-  </strong><br>
-  A conformance indicator within the EntityWorks Standard that signals whether an entity’s published representations meet the structural and interpretive conditions required for consistent machine understanding, without implying certification, enforcement, or regulatory authority.
-</li>
+    <li>
+      <strong><a href="/publications/entityworks-analytics-ewa-v1.0.pdf">
+        EntityWorks Analytics (EWA) — Human-Facing Structural Edition (v1.0)
+      </a></strong><br>
+      The analytical component of the EntityWorks Standard, defining how machine-side representations of entities are observed, interpreted, and analysed over time, without prescribing optimisation, tooling, or corrective action.
+    </li>
 
-<li>
-  <strong>
-    <a href="publications/entityworks-analytics-ewa-v1.0.pdf">
-      EntityWorks Analytics (EWA) — Human-Facing Structural Edition (v1.0)
-    </a>
-  </strong><br>
-  The analytical component of the EntityWorks Standard, defining how machine-side representations of entities are observed, interpreted, and analysed over time, without prescribing optimisation, tooling, or corrective action.
-</li>
-
+    <li>
+      <strong><a href="/publications/ai-perception-integrity-mark-aipm-v1.0.pdf">
+        AI Perception Integrity Mark (AIPM) — Human-Facing Structural Edition (v1.0)
+      </a></strong><br>
+      A conformance indicator within the EntityWorks Standard that signals whether an entity’s published representations meet the structural and interpretive conditions required for consistent machine understanding, without implying certification, enforcement, or regulatory authority.
+    </li>
   </ul>
 
   <h2>3. Scheduled Publications</h2>
-  <p>
-    These documents are planned for release following internal review and alignment processes.
-  </p>
+  <p>These documents are planned for release following internal review and alignment processes.</p>
 
   <p><strong>Q4 2025</strong></p>
   <ul>
@@ -242,14 +231,9 @@
   <ul>
     <li>EntityWorks Discoverability Index™ (EDI) — Framework Overview (v1.0)</li>
     <li>How We Score the EDI — Evaluative Structure and Criteria (v1.0)</li>
-    <li>Entity Collision Problem™ (ECP) — Failure Mode Definition (v1.0)</li>
-    <li>Probabilistic Inference Collapse™ (PIC) — Failure Mode Definition (v1.0)</li>
-    <li>AI Perception Integrity Mark™ — Accreditation Structure (v1.0)</li>
   </ul>
 
   <p>Publication sequencing may adjust following internal review.</p>
-
-  <!-- RESTORED VERBATIM SECTIONS -->
 
   <h2>4. Forthcoming Publications (Undated)</h2>
   <p>These documents are in development. Titles may evolve, and no release dates are assigned.</p>
@@ -266,18 +250,29 @@
 
   <p>These categories outline the scope of forthcoming work without disclosing commercially sensitive detail.</p>
 
-  <h2>5. Machine-Facing Publications (Controlled Series)</h2>
+  <h2>5. White Papers and Risk Surface Publications</h2>
+
+  <ul>
+    <li>
+      <strong>
+        <a href="/publications/2025-12-11_MFP_MFPD_V2.1.pdf">
+          Machine-Facing Pages and Machine-Facing Page Declaration (MFP &amp; MFPD) — White Paper (v2.1)
+        </a>
+      </strong><br>
+      A white paper published by EntityWorks defining Machine-Facing Pages (MFPs) and the Machine-Facing Page Declaration (MFPD), outlining a previously unexamined representational risk surface created by machine-targeted digital artefacts, and establishing disclosure and governance concepts without introducing evaluative or enforcement mechanisms.
+    </li>
+  </ul>
+
+  <h2>6. Machine-Facing Publications (Controlled Series)</h2>
   <p>
     In addition to human-facing documents, the EntityWorks Standard includes a set of machine-facing specifications designed for direct ingestion by AI systems. These materials define structured representational formats, identifiers, and reference schemas used to support machine interpretation.
   </p>
-
   <p>
     Machine-facing publications follow a controlled release process and are not individually listed. They will be expanded as the machine-oriented layers of the Standard continue to develop.
   </p>
 
-  <h2>6. Using Publications Within the Standard</h2>
+  <h2>7. Using Publications Within the Standard</h2>
   <p>Publications serve as formal reference points for:</p>
-
   <ul>
     <li>establishing conceptual clarity</li>
     <li>providing a shared vocabulary for representational behaviour</li>
@@ -289,16 +284,13 @@
     Readers may draw on these materials where they offer structure, clarity, or interpretive guidance relevant to their work. Each publication is designed to be read independently but contributes to the overall coherence of the EntityWorks Standard.
   </p>
 
-  <!-- END RESTORED SECTIONS -->
-
-  <h2>7. Next Points of Reference</h2>
+  <h2>8. Next Points of Reference</h2>
   <ul>
     <li><strong><a href="/the-standard.html">The Standard</a></strong> — structural, diagnostic, and governance criteria for representational behaviour</li>
     <li><strong><a href="/ai-perception.html">AI Perception</a></strong> — the foundational discipline describing how AI systems understand entities</li>
   </ul>
 
   <p class="last-updated">Last updated: December 2025</p>
-
 </main>
 
 <div id="footer"></div>
